--- a/_data/data.yml
+++ b/_data/data.yml
@@ -7,7 +7,7 @@ sidebar:
     education: True # set to False if you want education in main section instead of in sidebar
 
     # Profile information
-    name: Fernando Pérez'García
+    name: Fernando Pérez-García
     tagline: PhD Student in Medical Imaging
     avatar: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
@@ -54,7 +54,7 @@ sidebar:
         link:
 
 career-profile:
-    title: Career Profile
+    title: About Me
     summary: |
       Summarise your career here lorem ipsum dolor sit amet, consectetuer
       adipiscing elit. You can [download this free resume/CV template here]().
@@ -184,7 +184,7 @@ projects:
 
     assignments:
       - title: Velocity
-        link: "#hook"
+        link: "www.google.com"
         tagline: "A responsive website template designed to help startups promote, market and sell their products."
 
       - title: DevStudio
