--- a/_data/data.yml
+++ b/_data/data.yml
@@ -62,7 +62,6 @@ career-profile:
       penatibus et magnis dis parturient montes, nascetur ridiculus mus.
       Donec quam felis, ultricies nec, pellentesque eu.
 
-      Second paragraph if required.
       I am a PhD student at the
       [Wellcome/EPSRC Centre for Interventional and Surgical Sciences]
       (https://www.ucl.ac.uk/interventional-surgical-sciences/)
@@ -71,6 +70,9 @@ career-profile:
       [School of Biomedical Engineering & Imaging Sciences]
       (https://www.kcl.ac.uk/bmeis)
       (King's College London).
+
+      I'm interested in the potential of AI to improve refractory epilepsy
+      neurosurgery.
 
 education:
 
