--- a/_data/data.yml
+++ b/_data/data.yml
@@ -63,12 +63,10 @@ career-profile:
       Donec quam felis, ultricies nec, pellentesque eu.
 
       I am a PhD student at the
-      [Wellcome/EPSRC Centre for Interventional and Surgical Sciences]
-      (https://www.ucl.ac.uk/interventional-surgical-sciences/)
+      [Wellcome/EPSRC Centre for Interventional and Surgical Sciences](https://www.ucl.ac.uk/interventional-surgical-sciences/)
       (University College London)
       and the
-      [School of Biomedical Engineering & Imaging Sciences]
-      (https://www.kcl.ac.uk/bmeis)
+      [School of Biomedical Engineering & Imaging Sciences](https://www.kcl.ac.uk/bmeis)
       (King's College London).
 
       I'm interested in the potential of AI to improve refractory epilepsy
