--- a/_data/data.yml
+++ b/_data/data.yml
@@ -56,18 +56,13 @@ sidebar:
 career-profile:
     title: About Me
     summary: |
-      Summarise your career here lorem ipsum dolor sit amet, consectetuer
-      adipiscing elit. You can [download this free resume/CV template here]().
-      Aenean commodo ligula eget dolor aenean massa. Cum sociis natoque
-      penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-      Donec quam felis, ultricies nec, pellentesque eu.
-
       I am a PhD student at the
       [Wellcome/EPSRC Centre for Interventional and Surgical Sciences](https://www.ucl.ac.uk/interventional-surgical-sciences/)
       (University College London)
       and the
       [School of Biomedical Engineering & Imaging Sciences](https://www.kcl.ac.uk/bmeis)
-      (King's College London).
+      (King's College London) under supervision of Prof. Sébastien Ourselin
+      and Prof. John Duncan.
 
       I'm interested in the potential of AI to improve refractory epilepsy
       neurosurgery.
@@ -141,22 +136,14 @@ education:
           - Bullet point
 
 experiences:
-    - role: Lead Developer
-      time: 2015 - Present
-      company: Startup Hubs, San Francisco
+    - role: Software Engineer
+      time: 2019 - Present
+      company: Augmented Intelligence
       details: |
-        Describe your role here lorem ipsum dolor sit amet, consectetuer
-        adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-        Cum sociis natoque penatibus et magnis dis parturient montes,
-        nascetur ridiculus mus. Donec quam felis, ultricies nec,
-        pellentesque eu, pretium quis, sem. Nulla consequat massa quis
-        enim. Donec pede justo. Sed ut perspiciatis unde omnis iste natus
-        error sit voluptatem accusantium doloremque laudantium, totam rem
-        aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-        architecto beatae vitae dicta sunt explicabo.
-
-          - Bullet point
-          - Bullet point
+        I take part in the development of
+        [Digital Twin](https://www.mai.ai/digital-twin/), a desktop application
+        for visualization of medical images using virtual reality
+        built on top of [3D Slicer](https://www.slicer.org/).
 
     - role: Senior Software Engineer
       time: 2014 - 2015
