--- a/_data/data.yml
+++ b/_data/data.yml
@@ -138,14 +138,14 @@ education:
 experiences:
     - role: Software Engineer
       time: 2019 - Present
-      company: Augmented Intelligence
+      company: [Augmented Intelligence](https://www.mai.ai)
       details: |
         I take part in the development of
         [Digital Twin](https://www.mai.ai/digital-twin/), a desktop application
         for visualization of medical images using virtual reality
         built on top of [3D Slicer](https://www.slicer.org/).
 
-    - role: Senior Software Engineer
+    - role: Research Biomedical Engineer
       time: 2014 - 2015
       company: Google, London
       details: |
