--- a/_data/data.yml
+++ b/_data/data.yml
@@ -138,7 +138,7 @@ education:
 experiences:
     - role: Software Engineer
       time: 2019 - Present
-      company: [Augmented Intelligence](https://www.mai.ai)
+      company: Augmented Intelligence
       details: |
         I take part in the development of
         [Digital Twin](https://www.mai.ai/digital-twin/), a desktop application
