Add some info about ICM

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -146,21 +146,21 @@ experiences:
         built on top of [3D Slicer](https://www.slicer.org/).
 
     - role: Research Biomedical Engineer
-      time: 2014 - 2015
-      company: Google, London
+      time: 2015 - 2017
+      company: Brain & Spine Institute (ICM), Paris
       details: |
-        Describe your role here lorem ipsum dolor sit amet, consectetuer
-        adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-        Cum sociis natoque penatibus et magnis dis parturient montes,
-        nascetur ridiculus mus. Donec quam felis, ultricies nec,
-        pellentesque eu, pretium quis, sem.
 
-          - Bullet point
-          - Bullet point
+        I worked at the
+        [Stereotaxy Core Facility (STIM)](https://icm-institute.org/en/cenir-stim-stereotaxy-core-facility-techniques-images-models-2/)
+        of the
+        [Center for NeuroImaging Research (CENIR)](https://icm-institute.org/en/cenir-human-mri-nueroimaging-core-facility-for-clinical-research-2/).
+        The
+        [Brain & Spine Institute (ICM)](https://icm-institute.org/en/)
+        is part of the Pitié-Salpêtrière Hospital.
 
-    - role: UI Developer
-      time: 2012 - 2014
-      company: Amazon, London
+    - role: Research Biomedical Engineer
+      time: 2014 - 2015
+      company: Center for Biomedical Technology, Madrid
       details: |
         Describe your role here lorem ipsum dolor sit amet, consectetuer
         adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
